# Trabalho-SDII

./: Makefile  README.md  docker-compose.yml  teste.txt
cliente/: CMakeLists.txt  Dockerfile
cliente/src/: main.cpp
master/: CMakeLists.txt  Dockerfile
master/src/: main.cpp
slave/: CMakeLists.txt  Dockerfile
slave/src/: main.cpp
